# OSXScreenHelper

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  library.cpp  main.cpp
CMakeScripts/: ReRunCMake.make
OSX_Screen/: CMakeLists.txt  OpenCV.cpp  OpenCV.h  ScreenHelper.cpp  ScreenHelper.h  ScreenHelperExternal.cpp  ScreenHelperExternal.h  cmake_install.cmake
ScreenHelper.xcodeproj/: project.pbxproj
ScreenHelper.xcodeproj/project.xcworkspace/xcuserdata/dmitdavydov.xcuserdatad/: UserInterfaceState.xcuserstate
ScreenHelper.xcodeproj/xcshareddata/xcschemes/: OSX_Screen.xcscheme
ScreenHelper.xcodeproj/xcuserdata/dmitdavydov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ScreenHelper.xcodeproj/xcuserdata/dmitdavydov.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  main.cpp
src/OSX_Screen/: CMakeLists.txt
src/OSX_Screen/Common/: CMakeLists.txt
src/OSX_Screen/Common/Headers/: CommonFunctions.h
src/OSX_Screen/Common/Implementation/: CommonFunctions.cpp
src/OSX_Screen/Exceptions/: CMakeLists.txt
src/OSX_Screen/Exceptions/Headers/: ScreenHelperException.h
src/OSX_Screen/Exceptions/Implementation/: ScreenHelperException.cpp
src/OSX_Screen/Headers/: OpenCV.h  ScreenHelper.h  ScreenHelperCachedExternal.h  ScreenHelperExternal.h
src/OSX_Screen/Implementation/: OpenCV.cpp  ScreenHelper.cpp  ScreenHelperCachedExternal.cpp  ScreenHelperExternal.cpp
src/Utils/: CMakeLists.txt
src/Utils/Stopwatch/Headers/: Stopwatch.h
src/Utils/Stopwatch/Implementation/: Stopwatch.cpp
tests/: CMakeLists.txt  ScreenHelperTests.cpp
