message("Current build for: ${CMAKE_BUILD_TYPE}")
set(CMAKE_OSX_ARCHITECTURES arm64 CACHE INTERNAL "" FORCE)
set(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE})

cmake_policy(SET CMP0048 NEW)

project(ScreenHelper VERSION 1.0.0 DESCRIPTION "OSX Library for screen actions")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_OSX_ARCHITECTURES}/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${CMAKE_OSX_ARCHITECTURES}/${CMAKE_BUILD_TYPE})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_OSX_ARCHITECTURES}/${CMAKE_BUILD_TYPE})

cmake_minimum_required(VERSION 3.23)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(src)
add_subdirectory(tests)


